umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_aliphatic_glyceraldehyde.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :atoms ["C#h2" "O#h#n2" "C#h" "O#h#n2" "C#h" "O#n2"]
      :bonds [[0 1 :single] [0 2 :single] [2 3 :single] [2 4 :single] [4 5 :double]]}
    :success true
    :tie-breaks [0 1 2 3 4]}
  :atom-typing-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 [
        "C#h2#v2#d0#t0#a!#m!"
        "C#h#u#v2#d0#t0#a!#m!"
        "C#u2#v2#d0#t0#a!#m!"
        "C#n#v2#d0#t0#a!#m!"]
      1 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      2 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]
      3 ["O#h#n2#v#d0#t0#a!#m!" "O#n2#u#v#d0#t0#a!#m!"]
      4 ["C#h#v3#d0#t0#a!#m!" "C#u#v3#d0#t0#a!#m!"]}}
  :counts-most-saturated {
    :output {
      :atoms ["C#h2" "O#h#n2" "C#h" "O#h#n2" "C#h" "O#n2"]
      :bonds [[0 1 :single] [0 2 :single] [2 3 :single] [2 4 :single] [4 5 :double]]}
    :success true
    :tie-breaks [0 1 2 3 4]}
  :counts-strict {
    :success false
    :tie-breaks []
    :unresolved {
      0 ["C#n#v2#a!" "C#h#u#v2#a!" "C#h2#v2#a!"]
      1 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      2 ["C#u#v3#a!" "C#h#v3#a!"]
      3 ["O#n2#u#v#a!" "O#h#n2#v#a!"]
      4 ["C#u#v3#a!" "C#h#v3#a!"]}}}
