umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_beta-lactam.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#v4" "3" "O#n2#v2" "4" "N#h#n#v2"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"] [4 0 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h2#v2" "1" "C#h2#v2" "2" "C#v4" "3" "O#n2#v2" "4" "N#h#n#v2"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "2"] [2 4 "1"] [4 0 "1"]] :charge 0 :spin "#u0 #s1"}}}
