umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_butan-2-one.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#v4" "C#h2#v2" "C#h3#v" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [1 4 :double]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#v4" "C#h2#v2" "C#h3#v" "O#n2#v2"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [1 4 :double]]}
    :success true}}
