umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@carbonyl_derivatives_butyrate.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#c-#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :double] [3 5 :single]]}
    :success true}
  :counts {
    :output {
      :atoms ["C#h3#v" "C#h2#v2" "C#h2#v2" "C#v4" "O#n2#v2" "O#c-#n3#v"]
      :bonds [[0 1 :single] [1 2 :single] [2 3 :single] [3 4 :double] [3 5 :single]]}
    :success true}}
